# sea_battle_discord_bot

./: Cargo.toml  config.toml  docker-compose.yaml
.github/workflows/: ci.yml
src/: config.rs  game.rs  lib.rs
src/game/: field.rs  playing_state.rs  setup_state.rs
