[package]
name = "sea_battle_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.7", features = ["env", "toml", "yaml", "serde_json"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "json", "tls"] }
thiserror = "1.0.37"
tokio = { version = "1.21.1", features = ["full", "tracing"] }
serde = { version = "1.0.144", features = ["derive"] }
tracing = "0.1.36"
tracing-error = "0.2.0"
tracing-futures = { version = "0.2.5", features = ["futures", "tokio"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
tracing-tree = "0.2.1"
color-eyre = "0.6.2"

[[bin]]
name = "migrator"

[[bin]]
name = "discord_bot"
